--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.19",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
