--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-	"ssl": {
+	"ssl1": {
 		"enable": false,
-		"key": "../ssl/private.key",
-		"cert": "../ssl/public.key"
+		"key": "../certificate/private.key",
+		"cert": "../certificate/certificate.pem"
 	},
 	"mongo": {
 		"url": "mongodb://127.0.0.1/blog",
@@ -14,5 +14,8 @@
 		"host": "127.0.0.1",
 		"port": 6379,
 		"defaultExpired": "300"
+	},
+	"log": {
+		"storage": false
 	}
 }
