--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
     "redis": "^2.8.0"
