--- a/config/settings.json
+++ b/config/settings.json
@@ -1,3 +1,6 @@
 {
-  "biggestWrite": 10
+  "name": "风的颜色",
+  "logo": "https://raw.githubusercontent.com/AaronBank/static-files/master/images/tool-logo.png",
+  "phrase": "Only the harvest，to test the significance of the work；only the contribution，the value of the square can be measured。",
+  "copyright": "京ICP备18042670号"
 }
